# Velithon

./: .gitignore  CHANGELOG.md  Cargo.toml  MEMORY_OPTIMIZATION_SUMMARY.md  OPTIMIZATION_SUMMARY.md  PR_DESCRIPTION.md  PR_SUMMARY.md  README.md  VSP_MULTI_TRANSPORT_COMPLETE.md  advanced_benchmark_results.json  bottleneck_analysis.py  build.rs  json_serialization_benchmark.py  mkdocs.yml  optimization_benchmark_results.json  profile_di_system.py  profile_object_pool.py  profile_routing.py  pyproject.toml  pytest.ini  ruff.toml  simple_benchmark_results.json  test.py
.github/workflows/: codeql.yml  codspeed.yml  docs.yml  preview-deployments.yml  release-CI.yml  security-scan.yml  test-build.yml
benchmarks/: advanced_performance_suite.py  advanced_performance_suite_refactored.py  base_benchmark.py  json_serialization_benchmark.py  memory_optimization_benchmark.py  performance_suite.py  performance_suite_refactored.py  request_id_benchmark.py  simple_benchmark.py  simple_benchmark_refactored.py  simple_memory_benchmark.py
docs/: 05-routing.md  11-background-tasks.md  24-json-optimization.md  27-authentication-guide.md  DEPLOYMENT.md  JSONRESPONSE_MIGRATION.md  README.md  graphql.md  index.md  user-guide.md  websocket.md
docs/advanced/: circuit-breaker.md  connection-pooling.md  gateway.md  health-checks.md  index.md  json-optimization.md  load-balancing.md  vsp.md  (+2 more)
examples/: authentication_example.py  auto_serialization_example.py  database_example.py  enhanced_vsp_example.py  graphql_example.py  graphql_server.py  json_response_example.py  memory_management_example.py  memory_optimization_demo.py  production_prometheus_deployment.py  prometheus_example.py  rate_limit_example.py  real_world_custom_request_id.py  session_example.py  session_simple.py  simple_auth_example.py  vsp_deployment_config.py  vsp_multi_transport.py  websocket_demo.py
proto/: vsp.proto
scripts/: benchmark_logging.py  mypy.sh  ruff.sh
src/: background.rs  convertors.rs  di.rs  error.rs  event.rs  formparsers.rs  graphql.rs  headers.rs  json_encoder.rs  json_serializer.rs  lib.rs  logging.rs  memory_optimization.rs  middleware.rs  performance.rs  routing.rs  templates.rs
tests/: conftest.py  test_app_decorators.py  test_application_integration.py  test_auto_serialization.py  test_background_tasks.py  test_cache_key_collision_fix.py  test_caching.py  test_comprehensive_auth_parsing.py  test_comprehensive_auth_parsing_clean.py  test_compression_middleware.py  test_cors_middleware.py  test_custom_request_id.py  test_database.py  test_database_middleware.py  test_database_migrations.py  test_database_repository.py  test_database_session.py  test_database_transaction.py  test_error_handling.py  test_gateway.py  test_graphql_endpoint.py  test_graphql_integration.py  test_graphql_middleware.py  test_graphql_playground.py  test_graphql_route.py  test_graphql_schema.py  test_json_optimization.py  test_logging_manual_benchmark.py  test_logging_performance.py  test_parameter_parsing.py  test_params.py  test_prometheus_middleware.py  test_proxy.py  test_proxy_comprehensive.py  test_rate_limit_middleware.py  test_responses.py  test_route_integration.py  test_routing_advanced.py  test_security.py  test_session_middleware.py  (+5 more)
velithon/: __init__.py  _utils.py  _velithon.pyi  advanced_optimizations.py  application.py  background.py  base_datastructures.py  cache.py  cli.py  concurrency.py  convertors.py  ctx.py  datastructures.py  di.py  documentation.py  endpoint.py  exceptions.py  formparsers.py  gateway.py  graphql.py  json_responses.py  logging.py  memory_management.py  optimizations.py  optimizations_improved.py  performance.py  requests.py  responses.py  routing.py  rust_integration.py  rust_optimizations.py  rust_routing.py  selective_optimizations.py  serialization.py  status.py  types.py  vsp.py
(+152 files in other folders)
