[package]
name = "Velithon"
version = "0.2.0"
edition = "2024"
description = "Velithon is a lightweight, high-performance, asynchronous web framework for Python, built on top of the RSGI protocol"
authors = ["Dang Van Nghiem <martin@smartsolution.id.vn>"]
license = "BSD-3-Clause"
readme = "README.md"

[lib]
name = "_granian"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "=0.25", features = ["anyhow", "extension-module", "generate-import-lib"] }


[target.'cfg(not(any(target_env = "musl", target_os = "freebsd", target_os = "openbsd", target_os = "windows")))'.dependencies]
tikv-jemallocator = { version = "0.6.0", default-features = false, features = ["disable_initial_exec_tls"] }

[build-dependencies]
pyo3-build-config = "=0.25"

[features]
mimalloc = ["dep:mimalloc"]


[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = "fat"
opt-level = 3
panic = "abort"
strip = "debuginfo"