[package]
name = "Velithon"
version = "0.6.10"
edition = "2024"
description = "Velithon is a lightweight, high-performance, asynchronous web framework for Python, built on top of the RSGI protocol"
authors = ["Dang Van Nghiem <martin@smartsolution.id.vn>"]
license = "BSD-3-Clause"
readme = "README.md"

[lib]
name = "_velithon"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.2", features = ["extension-module", "generate-import-lib", "experimental-async"] }
pyo3-async-runtimes = { version = "0.27.0", features = ["tokio-runtime"] }
regex = "1.12.2"
uuid = { version = "1.19.0", features = ["v4"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
rand = "0.9.2"
mimalloc = { version = "0.1.48", optional = true }
chrono = { version = "0.4.42", features = ["serde"] }
flate2 = "1.1.5"
crossbeam-channel = "0.5"
parking_lot = "0.12.5"
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = { version = "0.1.19", features = ["full"] }
http-body-util = "0.1"
urlencoding = "2.1"
bytes = "1.11.0"
thiserror = "2.0.17"
ahash = "0.8"
handlebars = "6.2"
percent-encoding = "2.3.2"
tempfile = "3.23.0"

[target.'cfg(not(any(target_env = "musl", target_os = "freebsd", target_os = "openbsd", target_os = "windows")))'.dependencies]
tikv-jemallocator = { version = "0.6.1", default-features = false, features = ["disable_initial_exec_tls"] }

[build-dependencies]
pyo3-build-config = "0.27.2"

[features]
mimalloc = ["dep:mimalloc"]

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = "fat"
opt-level = 3
panic = "abort"
strip = "debuginfo"