[project]
name = "velithon"
version = "0.1.0"
description = "A lightweight, asynchronous web framework optimized for Granian"
authors = [
    {name = "Dang Van Nghiem",email = "vannghiem848@gmail.com"}
]
license = {text = "BSD-3-Clause"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "granian (>=2.2.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
