[project]
name = "velithon"
version = "0.1.0"
description = "A lightweight, asynchronous web framework optimized for Granian"
authors = [
    {name = "Dang Van Nghiem",email = "vannghiem848@gmail.com"}
]
license = {text = "BSD-3-Clause"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "granian[reload] (>=2.2.5,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "orjson (>=3.10.16,<4.0.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "pydash (>=8.0.5,<9.0.0)"
]

[tool.poetry.scripts]
velithon = "velithon.cli:cli"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
